--- a/WebBS4/miras.html
+++ b/WebBS4/miras.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="stilEgitim.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/19cdc3d7ad.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Mersin Mirası</title>
+    <title>Ana Sayfa</title>
   </head>
 <body>
 <header>
@@ -24,26 +27,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto ">
             <li class="nav-item">
-                <a class="nav-link text-white mr-3" href="index.html">Ana Sayfa</a>
+                <a class="nav-link text-white mr-3 fas fa-home" href="index.html"><p> &nbspAnasayfa</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="hakkimda.html">Hakkımda</a>
+                <a class="nav-link ml-3 text-white fas fa-graduation-cap" href="egitim.html"><p> &nbspEğitim</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="sehir.html">Şehrim</a>
+                <a class="nav-link ml-3 text-white fas fa-city" href="sehir.html"> <p>  &nbspŞehrim</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-success" href="miras.html">Mirasımız</a>
+                <a class="nav-link ml-3 text-success fas fa-archway" href="miras.html"> <p> &nbspMirasımız</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="iletisim.html">İletişim</a>
+                <a class="nav-link ml-3 text-white fas fa-phone-square-alt" href="iletisim.html"> <p> &nbspİletişim</p></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link ml-5 " href="login.html"> </a>
+                <a class="nav-link ml-5 " href="#"> </a>
                     <li><button type="button" class="btn btn-success btn-sm text-dark">
                      <img src="images/login.jpg" width="25" height="25" alt="giris yapmak icin tiklayiniz">
                     Giriş Yap </button> 
