--- a/WebBS4/index.html
+++ b/WebBS4/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/19cdc3d7ad.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -24,23 +27,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto ">
             <li class="nav-item">
-                <a class="nav-link text-success mr-3" href="index.html">Ana Sayfa</a>
+                <a class="nav-link text-success mr-3 fas fa-home" href="index.html"><p> &nbspAnasayfa</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="hakkimda.html">Hakkımda</a>
+                <a class="nav-link ml-3 text-white fas fa-graduation-cap" href="egitim.html"><p> &nbspEğitim</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="sehir.html">Şehrim</a>
+                <a class="nav-link ml-3 text-white fas fa-city" href="sehir.html"> <p>  &nbspŞehrim</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="miras.html">Mirasımız</a>
+                <a class="nav-link ml-3 text-white fas fa-archway" href="miras.html"> <p> &nbspMirasımız</p></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link ml-3 text-white" href="iletisim.html">İletişim</a>
+                <a class="nav-link ml-3 text-white fas fa-phone-square-alt" href="iletisim.html"> <p> &nbspİletişim</p></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link ml-5 " href="#"> </a>
@@ -53,14 +56,72 @@
         </div>
       </nav>
 </header>
-   
+
+<section id="slider">    
+  <div class="container">   
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/ben.jpg" class="d-block w-100" alt="Mahmut Can">
+    </div>
+    <div class="carousel-item">
+      <img src="images/pompeipolis.jpg" class="d-block w-100" alt="fotoğraf">
+    </div>
+    <div class="carousel-item">
+      <img src="images/basketbol.jpg" class="d-block w-100" alt="Basketbol">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>     
+</section>
 
 
+<div class="container">
+    <div class="row">
+        <div class="row">
+            <!-- Sakarya Üni Bilgi -->
+            <div class="col-md-4">
+              <div class="index-box">
+                <i class="fas fa-user"></i><span>Hakkımda</span>
+                <p>Merhabalar;<br>&nbsp&nbspBen Mahmut Can Bayram, 1999 Mersin doğumluyum. Şu anda Sakarya Üniversitesi Bilgisayar Mühendisliği öğrencisiyim.<br>&nbsp&nbsp Bilgisayarla erken tanıştığım için bilgisayarda oyun oynamak benim için her zaman büyük bir keyif, bazen de öğrenme ve keşfetme aracı olmuştur.
+                  Bilgisayar başında çok vakit geçirdiğim için de sayısız müzik dinledim</p>
+                <a href="egitim.html" class="btn btn-success">Eğitim bilgilerim için tıklayınız</a>
+              </div>
+            </div>
+            <!-- Bilg.Müh. Bilgi -->
+            <div class="col-md-4">
+              <div class="index-box">
+                <i class="fas fa-music"></i><span>Hobilerim</span>
+                <p>&nbsp&nbspYeni yerler keşfetmeyi, fotoğraf çekmeyi, müzik dinlemeyi, çoğu erkek çocuğu gibi çocukluğumda sokaklarda top oynadığım için futbol oynamayı ve hayvanlarla vakit geçirmeyi çok severim.</p>
+                <a href="http://cs.sakarya.edu.tr/tr" class="btn btn-success">Tümünü Gör</a>
+              </div>
+            </div>
+            <!-- Mersin Hakkında Yönlendirme -->
+            <div class="col-md-4">
+              <div class="index-box">
+                <i class="fab fa-dribbble"></i><span>Basketbol</span>
+                <p>
+                  Basketbol çocukluğumdan beri en sevdiğim spor olmuştur.Hem izlemek hem de oynamaktan büyük keyif almışımdır.Lise yıllarımda okullar arası turnuvalarda ve okul takımında oynamıştım.</p>
+                <a href="sehir.html" class="btn btn-success">Tümünü Gör</a>
+              </div>
+            </div>
 
-
-
-
-
+          </div>
+    </div>
+</div>
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
