--- a/WebBS4/miras.html
+++ b/WebBS4/miras.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="stilEgitim.css">
+    <link rel="stylesheet" href="stilFooter.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/19cdc3d7ad.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
@@ -63,7 +64,28 @@
 
 
 
-
+<footer class="footer-foot">
+  <div class="footer-right">
+  <a href="https://www.instagram.com/mahmutcanbayrm7/?hl=tr"><i class="fa fa-instagram"></i></a>
+  <a href="https://twitter.com/mhmtcnbyrm7"><i class="fa fa-twitter"></i></a>
+  <a href="https://www.linkedin.com/in/mahmut-can-bayram-551192195/"><i class="fa fa-linkedin"></i></a>
+  <a href="https://github.com/mcanb7"><i class="fa fa-github"></i></a>
+  </div>
+  <div class="footer-left">
+  <p class="footer-links">
+  <a href="index.html">Ana Sayfa</a>
+  ·
+  <a href="#">Eğitim</a>
+  ·
+  <a href="#">Şehrim</a>
+  ·
+  <a href="#">Mirasımız</a>
+  ·
+  <a href="#">İletişim</a>
+  </p>
+  <p>© 2021 Tüm Hakları Saklıdır.<br>Mahmut Can BAYRAM</p>
+  </div>
+  </footer>
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
