--- a/WebBS4/index.html
+++ b/WebBS4/index.html
@@ -43,7 +43,7 @@
                 <a class="nav-link ml-3 text-white fas fa-archway" href="miras.html"> <p> &nbspMirasımız</p></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ml-3 text-white fas fa-music" href="ilgialanim.html"> <p> &nbspİlgi Alanım</p></a>
+              <a class="nav-link ml-3 text-white fas fa-music" href="ilgialanim.php"> <p> &nbspİlgi Alanım</p></a>
           </li>
 
             <li class="nav-item">
@@ -112,7 +112,7 @@
                   ücretsiz bir API servisinden yararlandığım sayfaya tümünü gör diyerek ulaşabilirsiniz.
                 </p>
 
-                <a href="ilgialanim.html" class="btn btn-success ml-3">Tümünü Gör</a>
+                <a href="ilgialanim.php" class="btn btn-success ml-3">Tümünü Gör</a>
               </div>
             </div>
  
